# Internet-Assist-API

./: .env.example  .gitignore  README.md  deploy.sh  project_settings.py  pyproject.toml  requirements.txt  run.py  setup-windows.ps1  startup.sh  waitress_server.py  web.config  wsgi.py
.claude/: settings.json
app/: __init__.py  config.py  errors.py  extensions.py  logging.py
app/blueprints/admin/: routes.py
app/blueprints/analytics/: routes.py
app/blueprints/chat/: ai_gateway.py  routes.py  service.py
app/blueprints/health/: routes.py
app/blueprints/media/: routes.py
app/blueprints/public/: contact_routes.py  (+4 more)
app/models/: audit_log.py  base.py  chat_message.py  chat_session.py  contact.py  job_application.py  job_posting.py  otp_token.py  page_view.py  password_reset_token.py  project.py  quote.py  role.py  token_blacklist.py  user.py
app/schemas/: admin.py  base.py  public.py
app/services/: audit_service.py  email_service.py  media_service.py  seeder.py  ticket_service.py
app/utils/: decorators.py  response.py
migrations/versions/: 0d91efc0794c_add_job_postings.py  12860312c804_add_ticket_id_and_ticket_ref_to_.py  26e313ff93b8_initial_schema.py  a1b2c3d4e5f6_add_token_blacklist.py  a1b2c3d4e5f7_add_otp_tokens.py  b2c3d4e5f6a7_add_projects.py  c1a2b3d4e5f6_add_chat_ticket_flow.py  c3d4e5f6a7b8_add_page_views.py  d4e5f6a7b8c9_add_image_file_id_to_projects.py  d5fe4d490110_add_password_reset_tokens.py  e35c2dae30e7_remove_updated_at_from_audit_logs.py  e5f6a7b8c9d0_add_project_url_to_projects.py  f2147878404f_merge_ticket_and_chat_branches.py
(+1 files in other folders)
